pushing multiplatform image and adding its cid is working
