# pkg/routes/public_routes.go
@@ -20,4 +20,6 @@ func PublicRoutes(app *fiber.App) {
 	v1.Get("/crdt", controllers.GetCrdtList)
 	v1.Get("/crdt/:key", controllers.GetCrdtValue)
 	v1.Post("/crdt", controllers.PostCrdtValue)
+
+	v1.Post("/image", controllers.PostImage)
 }
